Update OpenAPI specs
